implement most of the basic function.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,12 +1,9 @@
 <ion-header *ngIf="authProvider.isAuthenticated();">
   <ion-navbar color="primary">
-    <button ion-button menuToggle>
+    <button ion-button [menuToggle]="activeMenu">
       <ion-icon name="menu"></ion-icon>
     </button>
     <!-- <ion-title>Health App</ion-title>-->
-    <ion-thumbnail item-start>
-      <img src="assets/img/1.jpg" (click)="goToProfile()">
-    </ion-thumbnail>
   </ion-navbar>
 </ion-header>
 
