--- a/src/pages/auth/signin/signin.html
+++ b/src/pages/auth/signin/signin.html
@@ -31,11 +31,28 @@
       <p>Your password needs more than 6 characters.</p>
     </ion-item>
 
+    
+
     <button ion-button block type="submit" [disabled]="!loginForm.valid">
       Login with email
     </button>
 
   </form>
+  
+  <ion-item>
+    <ion-label>User</ion-label>
+    <ion-toggle [(ngModel)]="User"></ion-toggle>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Doctor</ion-label>
+    <ion-toggle [(ngModel)]="Doctor"></ion-toggle>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Tecteam</ion-label>
+    <ion-toggle [(ngModel)]="TecTeam"></ion-toggle>
+  </ion-item>
 
   <!-- <button ion-button block color="facebook" (click)="signInWithFacebook()">
     Login with Facebook
