--- a/src/pages/status/status.html
+++ b/src/pages/status/status.html
@@ -1,26 +1,47 @@
-<!--
-  Generated template for the StatusPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-  <ion-navbar color="primary">
-    <button ion-button [menuToggle]="activeMenu">
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Status</ion-title>
-  </ion-navbar>
+    <ion-navbar color="primary">
+        <button ion-button menuToggle>
+          <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>Status</ion-title>
+    </ion-navbar>
 </ion-header>
 
 <ion-content class="blurry-background">
-  <img src="assets/img/7.jpg">
+    <img src="assets/img/7.jpg">
 </ion-content>
 
 <ion-content padding>
-  <ion-list>
-    <ion-item *ngFor="let item of items">
-      {{ item.profile.info.day }}    
-    </ion-item>
-  </ion-list>
+    <ion-card>
+        <ion-card-header>
+            <div align="center" vertical-align="middle">
+                Health Result
+            </div>
+
+            <hr>
+        </ion-card-header>
+        <ion-card-content>
+            <div align="center" vertical-align="middle">
+                Your Marks: {{finalsocre}}
+            </div>
+            <br>
+        </ion-card-content>
+        <canvas id="myChart" width="100" height="100"></canvas>
+        <hr>
+        <br>
+        <canvas id="myChange" width="100" height="100"></canvas>
+        <br>
+        <hr>
+        <br>
+        <div align="center" vertical-align="middle">
+            Your Height: {{height}} | Your Weight: {{weight}}
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div align="center" vertical-align="middle">
+            {{advise}}
+        </div>
+        <br>
+    </ion-card>
 </ion-content>
